--- a/Tyuiu.CherepanovAE.ConsoleApp.Lab1.V1.Test/Tyuiu.CherepanovAE.ConsoleApp.Lab1.V1.Test.csproj
+++ b/Tyuiu.CherepanovAE.ConsoleApp.Lab1.V1.Test/Tyuiu.CherepanovAE.ConsoleApp.Lab1.V1.Test.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.CherepanovAE.ConsoleApp.Lab1.V1.Lib\Tyuiu.CherepanovAE.ConsoleApp.Lab1.V1.Lib.csproj">
+      <Project>{480939a3-c9d4-4dea-b25e-c6351cf86166}</Project>
+      <Name>Tyuiu.CherepanovAE.ConsoleApp.Lab1.V1.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
